# manius_code

./: .env.example  .gitignore  Agent.md  README.md  pyproject.toml
.manius/memory/: episodes.jsonl
docs/: manius_development_plan.md
src/manius_code/: __init__.py
src/manius_code/cli/: Agent.md  __main__.py  main.py
src/manius_code/cli/commands/: chat.py  ping.py  run.py  trace.py
src/manius_code/core/: Agent.md  app.py  config.py  logging.py  tracing.py
src/manius_code/core/agent/: context.py  loop.py  runner.py
src/manius_code/core/autonomy/: __init__.py  auditor.py  contracts.py  executor.py  planner.py  policy.py  resolver.py  scheduler.py  store.py  structured_models.py  supervisor.py  verifier.py
src/manius_code/core/bus/: commands.py  envelope.py  events.py
src/manius_code/core/events/: bus.py  ipc.py  models.py  (+1 more)
src/manius_code/tui/: __init__.py  __main__.py  app.py
tests/: Agent.md  conftest.py  test_ping.py
tests/integration/: test_ping.py  test_tracing.py
tests/learning/: quick_sort.py  test.asynico.py  test_commands.py  test_instructor.py  test_jsonrpc.py
tests/unit/: test_agent_runner.py  test_anthropic_provider.py  test_autonomy_resume_parallel.py  test_autonomy_scheduler_store.py  test_cli_chat.py  test_cli_remote_run.py  test_cli_trace.py  test_config.py  test_core_app_events.py  test_core_app_sessions.py  test_execution_context.py  test_ipc_events.py  test_prompt_catalog.py  test_sessions.py  test_structured_autonomy_provider.py  test_task_manager.py  test_tavily_tools.py  test_tools.py  test_tracing.py  test_tui_app.py
(+28 files in other folders)
